--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Banana021s/my-irancell-panel/issues"
   },
-  "homepage": "https://github.com/Banana021s/my-irancell-panel#readme"
+  "homepage": "https://github.com/Banana021s/my-irancell-panel#readme",
+  "dependencies": {
+    "chart.js": "^3.8.0"
+  }
 }
